--- a/src/components/AddForm.module.css
+++ b/src/components/AddForm.module.css
@@ -22,3 +22,44 @@
     flex-direction: column;
     gap: 15px;
 }
+
+.back{
+    background: none;
+    height: auto;
+    border: none;
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    padding: 0px;
+}
+
+.goback{
+    position: absolute;
+    top: 30px;
+    left: 45px;
+}
+
+
+@media screen and (max-width:800px){
+    .form{
+        width: 100%;
+    }
+
+    .sectionForm{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .tag{
+        font-size: 35px;
+    }
+}
+
+
+@media screen and (max-width:800px){
+    .sectionForm{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+}
