--- a/src/components/LoginForm.module.css
+++ b/src/components/LoginForm.module.css
@@ -47,6 +47,12 @@ button{
     font-weight: 500;
     padding-left: 25px;
     padding-right: 25px;
+    cursor: pointer;
+}
+
+button:disabled{
+    background-color: gray;
+    color: black;
 }
 
 .signup{
@@ -54,4 +60,24 @@ button{
     color: blue;
     font-weight: 500;
     text-decoration: none;
+}
+
+@media screen and (max-width:600px){
+    .form{
+        width: 100%;
+    }
+
+    .sectionForm{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    button{
+        width: 100%;
+        height: 30px;
+    }
+
+    h1{
+        font-size: 35px;
+    }
 }
