--- a/src/index.css
+++ b/src/index.css
@@ -159,5 +159,69 @@ table {
 
   backdrop-filter: blur(5px);
 }
+.swiper .swiper-wrapper .swiper-slide .slideItem  {
+  border: 1px solid gray;
+  border-radius: 8px;
+  width: 50px !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+}
+
+ .dayWeek{
+  color: gray;
+  margin-top: 3px;
+  text-decoration: none;
+}
+
+  .block-comp{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 3px;
+}
+
+.completed{
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: greenyellow;
+  
+}
+
+.notCompleted{
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: black;
+}
 
 
+.dayNumber{
+  margin-top: 6px;
+  margin-bottom: 6px;
+  color: black;
+  text-decoration: none;
+}
+
+.active{
+  border: 3px solid gold;
+  border-radius: 8px;
+  width: 50px !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.swiper-slide:first-child  .slideItem:first-child{
+  background-color: black;
+}
+
+.swiper-slide:first-child .slideItem .dayWeek{
+  color: white;
+}
+
+.swiper-slide:first-child  .slideItem .dayNumber{
+  color: white;
+} 
