--- a/src/components/HeaderNavigation/Navigation.module.css
+++ b/src/components/HeaderNavigation/Navigation.module.css
@@ -2,9 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 auto;
     width: 100%;
-    padding: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -96,9 +96,6 @@
   }
 
 @media screen and (max-width:1024px){
-    .header{
-        padding: 35px;
-    }
 
     .butmenu{
         display: block;
@@ -107,13 +104,15 @@
     .list{
         display: none;
     }
+
+    .header{
+        padding-top: 35px;
+        padding-bottom: 35px;
+    }
 }
 
 @media screen and (max-width:600px){
-    .header{
-       padding-left: 15px;
-       padding-right: 15px;
-    }
+
 
     .butlog{
         margin-top: 0;
