--- a/src/components/InfoAboutTask/MoreTaskInfo.module.css
+++ b/src/components/InfoAboutTask/MoreTaskInfo.module.css
@@ -1,5 +1,5 @@
 .gapSect{
-    padding: 50px;
+    margin-top: 50px;
 }
 
 .title{
@@ -31,6 +31,10 @@
     gap: 15px;
 }
 
+.links{
+    text-decoration: none;
+}
+
 .back{
     background: none;
     height: auto;
@@ -51,7 +55,7 @@
     }
 
     .gapSect{
-        padding: 25px;
+        margin-top: 25px;
     }
 
 }
@@ -59,13 +63,6 @@
 @media screen and (max-width:600px){
     .buttons{
         flex-direction: column;
-    }
-
-    .gapSect{
-
-        padding-left: 15px;
-        padding-right: 15px;
-
     }
 
     .back{
