--- a/src/StyleGlobal/Style.scss
+++ b/src/StyleGlobal/Style.scss
@@ -5,6 +5,18 @@
 }
 
 
+@mixin inputstyle {
+  width: 100%;
+  border: 1px solid black;
+  outline: none;
+  border-radius: 4px;
+  padding: 8px 5px;
+  margin-bottom: 25px;
+  margin-top: 5px;
+  font-weight: 500;
+}
+
+
 $blackcolor: black;
 $gold: gold;
 $blue: blue;
