--- a/src/components/Form/FormStyles/Form.css
+++ b/src/components/Form/FormStyles/Form.css
@@ -24,6 +24,16 @@
     width: 100%;
   }
 }
+.sectionForm .form .inputs {
+  width: 100%;
+  border: 1px solid black;
+  outline: none;
+  border-radius: 4px;
+  padding: 8px 5px;
+  margin-bottom: 25px;
+  margin-top: 5px;
+  font-weight: 500;
+}
 .sectionForm .form .buttons {
   text-align: end;
 }
@@ -73,6 +83,16 @@
   .sectionForm .form {
     width: 100%;
   }
+}
+.sectionForm .form .inputs {
+  width: 100%;
+  border: 1px solid black;
+  outline: none;
+  border-radius: 4px;
+  padding: 8px 5px;
+  margin-bottom: 25px;
+  margin-top: 5px;
+  font-weight: 500;
 }
 .sectionForm .form .txt {
   display: flex;
