--- a/src/components/Form/FormStyles/Form.scss
+++ b/src/components/Form/FormStyles/Form.scss
@@ -1,10 +1,10 @@
-@import '../../../StyleGlobal/Style.scss';
+@import "../../../StyleGlobal/Style.scss";
 
 @mixin onlylarge($w) {
   @media only screen and (max-width: $w) {
     @content;
   }
-};
+}
 
 .sectionForm {
   display: flex;
@@ -23,6 +23,9 @@
     width: 500px;
     @include onlylarge(600px) {
       width: 100%;
+    }
+    .inputs {
+      @include inputstyle();
     }
     .buttons {
       text-align: end;
@@ -74,6 +77,9 @@
     @include onlylarge(800px) {
       width: 100%;
     }
+    .inputs {
+      @include inputstyle();
+    }
     .txt {
       display: flex;
       flex-direction: column;
@@ -87,5 +93,3 @@
     }
   }
 }
-
-
