--- a/src/StyleGlobal/Style.scss
+++ b/src/StyleGlobal/Style.scss
@@ -1,3 +1,28 @@
+// TODO: да, тут верно сделано, посмотри еще на эти структуру внимание 
+
+/*
+.color {
+  &_white {
+    color: $white;
+  }
+
+  &_blue-gray {
+    color: $blue-grey;
+  }
+
+  &_black {
+    color: $black;
+  }
+
+  &_dodger-blue {
+    color: $dodger-blue;
+  }
+}
+
+- Это в отдельный файл. Вот как пример, нужно, чтобы мы могли собирать из этих микроклассов различные стили, которые дублируются
+по приложению через библиотеку classnames(загугли, оч полезная штука)
+*/
+
 @mixin title {
   font-weight: bold;
   font-size: 40px;
